cmake_minimum_required(VERSION 4.0)
project(Blind_75)

set(CMAKE_CXX_STANDARD 14)

add_executable(TwoSum 1-TwoSum.cpp)
add_executable(BestTimeToBuySellStock 121-BestTimeToBuySellStock.cpp)
add_executable(ContainsDuplicate 217-ContainsDuplicate.cpp)
add_executable(ValidParenthesis 20-ValidParenthesis.cpp)

